makes fixed header on tablet and desktop view

--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,21 @@ header {
   border-bottom: 1px solid #ececec;
 }
 
+@media screen and (min-width: 768px) {
+  header {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    padding-top: 80px;
+  }
+}
+
 img {
   display: block;
   max-width: 100%;
